unpackaged/main/default/objects/Dreamhouse_Settings__c/fields/Einstein_Vision_Email__c.field-meta.xml
<CustomField>
        <fullName>Einstein_Vision_Email__c</fullName>
        <label>Einstein Vision Email</label>
        <type>Email</type>
    </CustomField>