unpackaged/main/default/objects/Dreamhouse_Settings__c/fields/LIFX_Token__c.field-meta.xml
<CustomField>
        <fullName>LIFX_Token__c</fullName>
        <label>LIFX Token</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>