unpackaged/main/default/objects/Dreamhouse_Settings__c/fields/LIFX_URL__c.field-meta.xml
<CustomField>
        <fullName>LIFX_URL__c</fullName>
        <label>LIFX URL</label>
        <type>Url</type>
    </CustomField>