unpackaged/main/default/objects/Dreamhouse_Settings__c/fields/Light_Service_URL__c.field-meta.xml
<CustomField>
        <fullName>Light_Service_URL__c</fullName>
        <label>Light Service URL</label>
        <type>Url</type>
    </CustomField>