unpackaged/main/default/objects/Dreamhouse_Settings__c/fields/Push_Server_URL__c.field-meta.xml
<CustomField>
        <fullName>Push_Server_URL__c</fullName>
        <label>Push Server URL</label>
        <type>Url</type>
    </CustomField>