unpackaged/main/default/objects/Dreamhouse_Settings__c/fields/Slack_Opportunity_Webhook_URL__c.field-meta.xml
<CustomField>
        <fullName>Slack_Opportunity_Webhook_URL__c</fullName>
        <label>Slack Opportunity Webhook URL</label>
        <type>Url</type>
    </CustomField>