unpackaged/main/default/objects/Dreamhouse_Settings__c/fields/Slack_Property_Webhook_URL__c.field-meta.xml
<CustomField>
        <fullName>Slack_Property_Webhook_URL__c</fullName>
        <label>Slack Property Webhook URL</label>
        <type>Url</type>
    </CustomField>